# CanBoard

./: .gitignore  README.md  Todos.md  pytest.ini
canboard-backend/: conftest.py  pyproject.toml
canboard-backend/app/application/commands/: archive_board_command.py  create_board_command.py  delete_board_command.py  resotre_board_command.py  update_board_command.py
canboard-backend/app/application/dtos/: board_dto.py  card_dto.py  column_dto.py
canboard-backend/app/application/use_cases/: metadata_factory.py
canboard-backend/app/domain/: base_entity.py  board.py  card.py  column.py
canboard-backend/app/domain/card_elements/: card_element.py  text_field.py
canboard-backend/app/domain/collections/: __init__.py  base_entity_collection.py  card_collection.py  card_element_collection.py  column_collection.py  user_collection.py
canboard-backend/app/domain/entities/: __init__.py  base_entity.py  board.py  card.py  column.py  user.py
canboard-backend/app/domain/errors/: __init__.py  already_exists_error.py  domain_validation_error.py  invalid_action_error.py  invalid_entity_error.py  not_found_error.py  repository_error.py
canboard-backend/app/domain/repositories/: __init__.py  board_repository.py  user_repository.py
canboard-backend/app/domain/values/: __init__.py  (+8 more)
canboard-backend/app/infrastructure/: board_repo.py
canboard-backend/app/services/: board_services.py
canboard-backend/test/: utils.py
canboard-backend/test/domain/: test_base_entity.py  test_board.py  test_card.py  test_column.py
canboard-backend/test/services/: test_board_service.py
(+35 files in other folders)
